--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "homebridge-web-lock",
-  "version": "1.1.9",
-  "description": "Homebridge plugin for a web-based lock",
+  "name": "homebridge-shelly-lock",
+  "version": "0.1",
+  "description": "Homebridge plugin for a Shelly-based lock",
   "main": "index.js",
   "engines": {
     "homebridge": ">=0.4.50",
@@ -16,15 +16,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phenotypic/homebridge-web-lock.git"
+    "url": "git+https://github.com/punapanda/homebridge-shelly-lock.git"
   },
   "keywords": [
     "homebridge-plugin"
   ],
-  "author": "phenotypic",
+  "author": "punapanda",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/phenotypic/homebridge-web-lock/issues"
+    "url": "https://github.com/punapanda/homebridge-shelly-lock/issues"
   },
-  "homepage": "https://github.com/phenotypic/homebridge-web-lock#readme"
+  "homepage": "https://github.com/punapanda/homebridge-shelly-lock#readme"
 }
